--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,8 +12,8 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 1005
-  skip: True  # [py2k]
+  number: 1006
+  noarch: python
   script: {{ PYTHON }} -m pip install . --no-deps -vv
   
 requirements:
