--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,14 +20,18 @@ requirements:
   host:
     - python {{ python_min }}
     - pip
+    - setuptools
   run:
     - python >={{ python_min }}
 
 test:
   requires:
     - python {{ python_min }}
+    - pip
   imports:
     - simpletal
+  commands:
+    - pip check
 
 about:
   home: http://owlfish.com/software/simpleTAL
